# femus

./: CMakeLists.txt
applications/: CMakeLists.txt
applications/Hierarchical/: CMakeLists.txt
applications/Hierarchical/HR_Ex1/: CMakeLists.txt  HR_Ex1.cpp
applications/Hierarchical/testSingleElement/: testSingleElement.cpp
src/: CMakeLists.txt  CMakeLists.txt~
src/hierarchical/: basis.hpp  basish.hpp  elem.cpp  elem.hpp  elem_type.cpp  elem_type.hpp  element.cpp  element.hpp  friendFuns.hpp  hFun.cpp  hFun.hpp  hVisualize.cpp  hVisualize.hpp  hex.cpp  hexh.cpp  linFun.cpp  line.cpp  lineh.cpp  linehFun.cpp  lsysPDE.cpp  lsysPDE.hpp  main.hpp  mesh.cpp  mesh.cpp~  mesh.hpp  multigrid.cpp  multigrid.hpp  quad.cpp  quadh.cpp  tet.cpp  teth.cpp  tetraFun.cpp  tri.cpp  triFun.cpp  trih.cpp  trihFun.cpp  wedge.cpp  wedgeh.cpp
src/hierarchical/single_element/: basis.hpp  basish.hpp  elem_type.cpp  elem_type.hpp  element.cpp  element.hpp  friendFuns.hpp  hFun.cpp  hFun.hpp  hex.cpp  hexh.cpp  linFun.cpp  line.cpp  lineh.cpp  linehFun.cpp  main.hpp  quad.cpp  quadh.cpp  tet.cpp  teth.cpp  tetraFun.cpp  tri.cpp  triFun.cpp  trih.cpp  trihFun.cpp  wedge.cpp  wedgeh.cpp
